update ktc and tool macros

--- a/printer_data/config/displays.cfg
+++ b/printer_data/config/displays.cfg
@@ -145,6 +145,12 @@ name: LEDS off
 gcode: 
   TURN_OFF_LEDS
 
+[menu __main turn_on_leds]
+type: command
+name: LEDS on
+gcode: 
+  TURN_ON_LEDS
+
 
 [neopixel fysetc_mini12864]
 #	To control Neopixel RGB in mini12864 display
