--- a/printer_data/config/moonraker.conf
+++ b/printer_data/config/moonraker.conf
@@ -43,6 +43,10 @@ refresh_interval: 168
 [file_manager]
 enable_object_processing: True
 
+[timelapse]
+  output_path: ~/printer_data/timelapse/
+  frame_path: /tmp/timelapse/printer
+
 [include octoeverywhere-system.cfg]
 
 [update_manager klipper-toolchanger-easy]
