--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -1,7 +1,8 @@
 [include mainsail.cfg]
+[include timelapse.cfg]
 [include displays.cfg]
 [include steppers.cfg]
-[include stealthchanger/toolchanger-include.cfg]
+[include toolchanger/readonly-configs/toolchanger-include.cfg]
 [include user-macros/macros-include.cfg]
 [exclude_object]
 
@@ -137,18 +138,57 @@ mesh_pps: 2, 3
 mesh_min: 40, 40
 mesh_max: 310, 310
 
+[axis_twist_compensation]
+speed: 50
+#   The speed (in mm/s) of non-probing moves during the calibration.
+#   The default is 50.
+horizontal_move_z: 5
+#   The height (in mm) that the head should be commanded to move to
+#   just prior to starting a probe operation. The default is 5.
+calibrate_start_x: 20
+#   Defines the minimum X coordinate of the calibration
+#   This should be the X coordinate that positions the nozzle at the starting
+#   calibration position.
+calibrate_end_x: 330
+#   Defines the maximum X coordinate of the calibration
+#   This should be the X coordinate that positions the nozzle at the ending
+#   calibration position.
+calibrate_y: 175
+#   Defines the Y coordinate of the calibration
+#   This should be the Y coordinate that positions the nozzle during the
+#   calibration process. This parameter is recommended to
+#   be near the center of the bed
+
+# For Y-axis twist compensation, specify the following parameters:
+calibrate_start_y: 20
+#   Defines the minimum Y coordinate of the calibration
+#   This should be the Y coordinate that positions the nozzle at the starting
+#   calibration position for the Y axis. This parameter must be provided if
+#   compensating for Y axis twist.
+calibrate_end_y: 330
+#   Defines the maximum Y coordinate of the calibration
+#   This should be the Y coordinate that positions the nozzle at the ending
+#   calibration position for the Y axis. This parameter must be provided if
+#   compensating for Y axis twist.
+calibrate_x: 175
+#   Defines the X coordinate of the calibration for Y axis twist compensation
+#   This should be the X coordinate that positions the nozzle during the
+#   calibration process for Y axis twist compensation. This parameter must be
+#   provided and is recommended to be near the center of the bed.
+
+
 #####################################################################
 #	Stepper Tuning Param
 #####################################################################
 
-[autotune_tmc stepper_x]
-motor: TB-3544
-tuning_goal:performance
+#[autotune_tmc stepper_x]
+#motor: TB-3544
+#tuning_goal:performance
 ;sg4_thrs: 45
 ;extra_hysteresis: 3
-[autotune_tmc stepper_y]
-motor: TB-3544
-tuning_goal: performance 
+#[autotune_tmc stepper_y]
+#motor: TB-3544
+#tuning_goal: performance 
 ;sg4_thrs: 80
 ;extra_hysteresis: 3
 
@@ -164,14 +204,6 @@ tuning_goal: performance
 ;[autotune_tmc stepper_z3]
 ;motor: TB-3544
 ;tuning_goal:performance
-
-
-[duplicate_pin_override]
-pins: PA0
-
-[filament_switch_sensor head1_attached]
-switch_pin: PA0
-pause_on_runout: false
 
 #--------------------------------------------------------------------
     
@@ -190,16 +222,26 @@ pause_on_runout: false
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.075606, 0.052310, -0.068106
-#*# 	-0.014773, 0.071060, -0.055606
-#*# 	-0.071023, 0.103560, -0.070190
-#*# x_count = 3
-#*# y_count = 3
+#*# 	-0.060000, 0.028750, 0.095000, 0.016250, -0.105000
+#*# 	-0.040000, 0.050000, 0.062500, -0.005000, -0.073750
+#*# 	-0.032500, 0.027500, 0.046250, -0.007500, -0.131250
+#*# 	-0.041250, 0.055000, 0.080000, 0.033750, -0.081250
+#*# 	-0.077500, 0.017500, 0.065000, -0.008750, -0.133750
+#*# x_count = 5
+#*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 3
-#*# algo = lagrange
+#*# algo = bicubic
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# max_x = 310.0
 #*# min_y = 40.0
 #*# max_y = 310.0
+#*#
+#*# [axis_twist_compensation]
+#*# z_compensations = -0.019500, 0.020500, -0.015750, -0.014500, 0.029250
+#*# compensation_start_x = 20.0
+#*# compensation_end_x = 330.0
+#*# zy_compensations = 0.121000, 0.067250, -0.012750, -0.060250, -0.115250
+#*# compensation_start_y = 20.0
+#*# compensation_end_y = 330.0
