--- a/printer_data/config/toolchanger/toolchanger-config.cfg
+++ b/printer_data/config/toolchanger/toolchanger-config.cfg
@@ -18,10 +18,18 @@ enable_force_move: True
 #z_offset = -1.170 # TEXTURED PLATE
 
 [toolchanger]
+require_tool_present: False # Set to False to allow toolless movement. Toolless movement should be used with caution.
 params_safe_y: 120
 params_close_y: 30
+on_axis_not_homed: home
 params_fast_speed: 15000 # Go as fast as we can
-params_path_speed: 1500  # slower on the path
+params_path_speed: 1000  # slower on the path
+params_dropoff_path: [{'y':9.5 ,'z':4}, {'y':9.5, 'z':2}, {'y':5.5, 'z':0}, {'z':0, 'y':0, 'f':0.5}, {'z':-10, 'y':0}, {'z':-10, 'y':16}]
+params_pickup_path: [{'z':-10, 'y':16}, {'z':-10, 'y':0}, {'z':0, 'y':0, 'f':0.5, 'verify':1}, {'y':5.5, 'z':0}, {'y':9.5, 'z':2}, {'y':9.5 ,'z':4}]
+# error_gcode:
+  # If specified, this gcode is run on failures instead of erroring out Klipper 
+  # Typical use would be to pause the print and put INITIALIZE_TOOLCHANGER in the resume macro to reset toolchanger.
+# recover_gcode:
 
 # this section must be completed
 [gcode_macro homing_override_config]
@@ -48,9 +56,16 @@ variable_homing_current: 0.8
 # these values need to be set to match the location of your Calibration Switch
 [gcode_macro _CALIBRATION_SWITCH]
  variable_x: 248
- variable_y: 31
+ variable_y: 19
  variable_z: 57
  gcode:
+
+[duplicate_pin_override]
+pins: PA0
+
+[filament_switch_sensor head1_attached]
+switch_pin: PA0
+pause_on_runout: false
 
 [tools_calibrate]
 pin: PA0  #pin that your calibration probe is connected to.
@@ -61,8 +76,8 @@ speed: 2  # The speed (in mm/sec) to retract between probes
 lift_speed: 4  # Z Lift after probing done, should be greater than any Z variance between tools
 final_lift_z: 6 
 sample_retract_dist:2
-samples_tolerance:0.05
-samples:5
+samples_tolerance:0.075
+samples:10
 samples_result: median # median, average
 # Settings for nozzle probe calibration - optional.
 #probe: probe # name of the nozzle probe to use
