--- a/printer_data/config/toolchanger/tools/T0.cfg
+++ b/printer_data/config/toolchanger/tools/T0.cfg
@@ -29,7 +29,7 @@ sensor_type: Generic 3950
 
 full_steps_per_rotation: 200
 microsteps: 32
-rotation_distance: 23.700
+rotation_distance: 23.6
 gear_ratio: 50:10
 nozzle_diameter: 0.400
 filament_diameter: 1.750
@@ -43,13 +43,14 @@ pid_Kd: 49.091
 min_temp: 0
 max_temp: 300
 
-min_extrude_temp: 0
-pressure_advance: 0.02                                          
+min_extrude_temp: 150
+pressure_advance: 0.04                                          
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: EBBT0: PA15
-run_current: 0.5
+run_current: 0.6
+sense_resistor: 0.110
 stealthchop_threshold: 0
 
 [heater_fan T0_hotend_fan]
@@ -69,27 +70,41 @@ gcode:
 [tool T0]
 tool_number: 0
 extruder: extruder
-fan: fan_generic T0_partfan
+fan: T0_partfan
 
 #These are build specific, its where the tool is sititng in it's dock.
-params_park_x: 9.5
-params_park_y: 4
-params_park_z: 296.5
+params_park_x: 8.5
+params_park_y: 5
+params_park_z: 299
 # For InputShaper run per tool and enter the frequency here
 params_input_shaper_type_x: 'mzv'
 params_input_shaper_freq_x: 52
 params_input_shaper_type_y: 'mzv'
 params_input_shaper_freq_y: 37.2
+# t_command_restore_axis: XYZ
+
+pickup_gcode:
+  SET_LED LED=T0 RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
+  # Gcode to run to pick up this tool, if empty, there is no pickup code.
+  # The gocode can use `tool` and `toolchanger` variables to access
+  # [their status](Status_Reference.md#tool).
+dropoff_gcode:
+  SET_LED LED=T0 RED=1 GREEN=0 BLUE=0 WHITE=0 TRANSMIT=1
+  # Gcode to run to drop off this tool, if empty, there is no dropoff code.
 
 [tool_probe T0]
-pin: ^EBBT0:PB6
+pin: ^EBBT0:PB9
 tool: 0
 x_offset: 0
 y_offset: 0
 # More positive = More Squish
-z_offset: -1.590 # TEXTURED PLATE
+#z_offset: -1.575 # TEXTURED PLATE
+#z_offset: -1.175
+z_offset: -1.560
+;z_offset: -1.570
 #z_offset = -1.290 #-1.390 # SMOOTH PLATE
-speed: 10.0
+#z_offset: -1.530 # for abs squish
+speed: 20.0
 samples: 3
 samples_result: median
 sample_retract_dist: 2.0
