--- a/printer_data/config/toolchanger/tools/T2.cfg
+++ b/printer_data/config/toolchanger/tools/T2.cfg
@@ -18,21 +18,22 @@ sensor_type: Generic 3950
 
 full_steps_per_rotation: 200
 microsteps: 32
-rotation_distance: 54.9
-gear_ratio: 44:10, 37:17
+rotation_distance: 23.6
+gear_ratio: 50:10
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 
 control: pid
 
-pid_Kp: 12.564 
-pid_Ki: 0.458 
-pid_Kd: 86.220
+pid_Kp:35.280 
+pid_Ki:11.760 
+pid_Kd:26.461
 
 min_temp: 0
 max_temp: 300
-min_extrude_temp: 0
-pressure_advance: 0.02                                          
+
+min_extrude_temp: 150
+pressure_advance: 0.06                                        
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder2]
@@ -57,29 +58,38 @@ gcode:
 [tool T2]
 tool_number: 2
 extruder: extruder2
-fan: fan_generic T2_partfan
+fan: T2_partfan
 
-gcode_x_offset: -0.190625
-gcode_y_offset: -0.025000
-gcode_z_offset: 0.427500
+gcode_x_offset: -0.710937
+gcode_y_offset: -0.992187
+gcode_z_offset: -0.688750
 
-params_park_x: 139
-params_park_y: 4.5
-params_park_z: 296
+params_park_x: 175
+params_park_y: 5
+params_park_z: 299
 
 #params_input_shaper_type_x: 'mzv'
 #params_input_shaper_freq_x: 52
 #params_input_shaper_type_y: 'mzv'
 #params_input_shaper_freq_y: 37.2
 
+pickup_gcode:
+  SET_LED LED=T2 RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
+  # Gcode to run to pick up this tool, if empty, there is no pickup code.
+  # The gocode can use `tool` and `toolchanger` variables to access
+  # [their status](Status_Reference.md#tool).
+dropoff_gcode:
+  SET_LED LED=T2 RED=1 GREEN=0 BLUE=0 WHITE=0 TRANSMIT=1
+  # Gcode to run to drop off this tool, if empty, there is no dropoff code.
+
 [tool_probe T2]
 pin: ^EBBT2:PB9
 tool: 2
 x_offset: 0 # X axis-sensor relative nozzle offset
 y_offset: 0 # Y axis-sensor relative nozzle offset
-z_offset: -1.037500 # Z axis-sensor relative nozzle offset
+z_offset: -1.100 # Z axis-sensor relative nozzle offset
 # drop_first_result: True # enable is on danger-klipper
-speed: 10.0
+speed: 20.0
 samples: 3
 samples_result: median
 sample_retract_dist: 2.0
