--- a/printer_data/config/user-macros/common-moves.cfg
+++ b/printer_data/config/user-macros/common-moves.cfg
@@ -27,3 +27,21 @@ gcode:
   G90
   SET_KINEMATIC_POSITION X=175 Y=175 Z=0
   G0 Z50 F2000
+
+[gcode_macro PROBE_CAL_SEQ]
+gcode:
+  G28
+  QUAD_GANTRY_LEVEL
+  G28 Z
+  MOVE_TO_CENTER
+  PROBE_CALIBRATE
+
+[gcode_macro UTOOL_ALIGN_TEST]
+gcode:
+    {% set curpos = printer.gcode_move.gcode_position %}
+    INITIALIZE_TOOLCHANGER # Detect current tool
+    SET_GCODE_OFFSET X=0 Y=0 Z=0
+    SET_TOOL_PARAMETER PARAMETER='params_park_x' VALUE={curpos[0]}
+    SET_TOOL_PARAMETER PARAMETER='params_park_y' VALUE={curpos[1]}
+    SET_TOOL_PARAMETER PARAMETER='params_park_z' VALUE={curpos[2]}
+    TEST_TOOL_DOCKING RESTORE_AXIS=XYZ
