--- a/printer_data/config/user-macros/filament.cfg
+++ b/printer_data/config/user-macros/filament.cfg
@@ -1,11 +1,15 @@
 [gcode_macro LOAD_FILAMENT]
 variable_ignore_min_extrude_temp: True
 gcode:
-  RESPOND MSG="Centering toolhead for loading filament"
-  CENTER_TOOL
+  {% set active = printer.toolchanger.detected_tool_number %}
+  {% if active == -1 %}
+    M117 No tool detected
+  {% endif %}
+  ;RESPOND MSG="Centering toolhead for loading filament"
+  ;MOVE_TO_CENTER
   G90 ; Absolute pos
-  M109 S240 ;Heat up the filament
-  M117 Heating to 240 C (estop if stall)
+  M109 T{active} S240 D10 ;Heat up the filament
+  M117 Heating T{active} to 240 C (estop if stall)
   M117 Loading {params.TOOL}
   M83                            ; set extruder to relative
   G1 E50 F800 
@@ -20,10 +24,14 @@ gcode:
 [gcode_macro UNLOAD_FILAMENT]
 variable_ignore_min_extrude_temp: True
 gcode:
-  RESPOND MSG="Centering toolhead for loading filament"
-  CENTER_TOOL
-  M109 S240
-  M117 Heating to 240 C (estop if stall)
+  {% set active = printer.toolchanger.detected_tool_number %}
+  {% if active == -1 %}
+    M117 No tool detected
+  {% endif %}
+  ;RESPOND MSG="Centering toolhead for loading filament"
+  ;MOVE_TO_CENTER
+  M109 T{active} S240 D10 ;Heat up the filament
+  M117 Heating T{active} to 240 C (estop if stall)
   M117 Unloading {params.TOOL}
   M83                           ; set extruder to relative
   G1 E5 F800                   ; extrude 10 mm
@@ -60,10 +68,9 @@ gcode:
     M104 T{printer[tool].tool_number} S240 ;Heat up the filament
   {% endfor %}
   {% for tool in tools %}
-    M109 T{printer[tool].tool_number} S240 ;Wait until heated
+    M109 T{printer[tool].tool_number} S240 D10 ;Wait until heated
     ACTIVATE_EXTRUDER EXTRUDER={printer[tool].extruder}
     M83                           ; set extruder to relative
-    G1 E5 F500                     ; extrude 5 mm
     G1 E-50 F1000                   ; retract 5 cm
     G1 E-50 F1000                   ; retract 5 cm
   {% endfor %}
@@ -76,7 +83,7 @@ gcode:
 [gcode_macro CHANGE_NOZZLE]
 gcode:
   M117 Nozzle change
-  CENTER_TOOL
+  ;MOVE_TO_CENTER
 
   M104 S250 ;Heat up the filament
   M117 Heating to 220 C (estop if stall)
