--- a/printer_data/config/user-macros/leds.cfg
+++ b/printer_data/config/user-macros/leds.cfg
@@ -1,8 +1,12 @@
 [gcode_macro TURN_ON_ACTIVE_TOOLHEAD_LEDS]
 gcode:
   {% set tools = printer.toolchanger.tool_numbers %}
-  {% for tool in tools[0:] %}
-    SET_LED LED=T{tool} RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
+
+  {% for tn in printer.toolchanger.tool_numbers %}
+    {% set extruder_id = "extruder" + tn|string if tn > 0 else "extruder" %}
+      {% if printer[extruder_id].target > printer.configfile.settings[extruder_id].min_extrude_temp %} # my mins are 0 so I am using ">"
+      SET_LED LED=T{tn} RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
+    {% endif %}
   {% endfor %}
 
 
