--- a/printer_data/config/toolchanger/tools/T1.cfg
+++ b/printer_data/config/toolchanger/tools/T1.cfg
@@ -20,7 +20,7 @@ axes_map: x,z,y
 
 [extruder1]
 step_pin: EBBT1: PD0
-dir_pin: !EBBT1: PD1
+dir_pin: EBBT1: PD1
 enable_pin: !EBBT1: PD2
 heater_pin: EBBT1: PB13
 sensor_pin: EBBT1: PA3
@@ -41,8 +41,8 @@ pid_Kd: 64.460
 
 min_temp: 0
 max_temp: 300
-min_extrude_temp: 0
-pressure_advance: 0.02                                          
+min_extrude_temp: 150
+pressure_advance: 0.06                                          
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder1]
@@ -67,30 +67,38 @@ gcode:
 [tool T1]
 tool_number: 1
 extruder: extruder1
-fan: fan_generic T1_partfan
+fan: T1_partfan
 
-gcode_x_offset: -0.190625
-gcode_y_offset: -0.025000
-gcode_z_offset: 0.427500
+gcode_x_offset: 0.045313
+gcode_y_offset: -0.500000
+gcode_z_offset: 0.448750
 
-params_park_x: 74.5
-params_park_y: 3.5
-params_park_z: 296.5
+params_park_x: 91.5
+params_park_y: 5
+params_park_z: 299
 
 #params_input_shaper_type_x: 'mzv'
 #params_input_shaper_freq_x: 52
 #params_input_shaper_type_y: 'mzv'
 #params_input_shaper_freq_y: 37.2
 
+pickup_gcode:
+  SET_LED LED=T1 RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
+  # Gcode to run to pick up this tool, if empty, there is no pickup code.
+  # The gocode can use `tool` and `toolchanger` variables to access
+  # [their status](Status_Reference.md#tool).
+dropoff_gcode:
+  SET_LED LED=T1 RED=1 GREEN=0 BLUE=0 WHITE=0 TRANSMIT=1
+  # Gcode to run to drop off this tool, if empty, there is no dropoff code.
 
 [tool_probe T1]
 pin: ^EBBT1:PB9
 tool: 1
 x_offset: 0 # X axis-sensor relative nozzle offset
 y_offset: 0 # Y axis-sensor relative nozzle offset
-z_offset: -0.767917 # Z axis-sensor relative nozzle offset
+z_offset: -1.101 # Z axis-sensor relative nozzle offset
 # drop_first_result: True # enable is on danger-klipper
-speed: 10.0
+speed: 20.0
 samples: 3
 samples_result: median
 sample_retract_dist: 2.0
