--- a/printer_data/config/user-macros/prime-clean-nozzle.cfg
+++ b/printer_data/config/user-macros/prime-clean-nozzle.cfg
@@ -1,12 +1,33 @@
+
+[gcode_macro WIPE_NOZZLE]
+variable_start_x: 40
+variable_start_y: -8
+variable_start_z: 4
+variable_wipe_dist: 50
+variable_wipe_times: 6
+variable_wipe_speed: 200
+gcode:
+  G90
+  ## Move nozzle to start position
+  G1 X{start_x + (wipe_dist/2)} Y{start_y} F18000
+  G1 Z{start_z} F1500
+  ## Wipe nozzle
+  G1 X{start_x} F{wipe_speed * 60}
+  {% for wipes in range(1, (wipe_times + 1)) %}
+    G1 X{start_x + wipe_dist} F{wipe_speed * 60}
+    G1 X{start_x} F{wipe_speed * 60}
+  {% endfor %}
+  G1 Y{start_y+wipe_dist} F{wipe_speed*60}
+
 [gcode_macro CLEAN_NOZZLE]
 variable_start_x: 40
 variable_start_y: -8
-variable_start_z: 5
+variable_start_z: 4
 variable_wipe_dist: 50
 variable_wipe_times: 6
 variable_wipe_speed: 200
 variable_raise_distance: 8
-variable_min_temp: 150
+variable_min_temp: 200
 gcode:
   {% if "xyz" not in printer.toolhead.homed_axes %}
     G28
@@ -54,7 +75,7 @@ gcode:
 description: Prime all extruders before printing.
   INITIAL_TOOL= Tool number, optional.
 variable_purge_volume:         40      # Amount to purge 
-variable_initial_tool_retract: 0.5    # Retraction distance for the initial tool (if defined) after prime
+variable_initial_tool_retract: 0    # Retraction distance for the initial tool (if defined) after prime
 variable_docked_tool_retract:  5      # Retraction distance for docked tools after prime
 variable_z_move_pos:           8      # Distance from bed on Z axis while moving
 variable_move_speed:           10000  # Travel move speed
